--- a/Resources/Prototypes/Recipes/Cooking/sequence_metamorph.yml
+++ b/Resources/Prototypes/Recipes/Cooking/sequence_metamorph.yml
@@ -30,6 +30,54 @@
     - Bun
 
 - type: metamorphRecipe
+  id: FoodBurgerPlain
+  key: Burger
+  result: FoodBurgerPlain
+  rules:
+  - !type:SequenceLength
+    range:
+      min: 2
+      max: 3
+  - !type:IngredientsWithTags # 1 meat cutlet
+    tags:
+    - Cooked
+    - Cutlet
+    - Meat
+    count:
+      min: 1
+      max: 2
+  - !type:LastElementHasTags # last bun
+    tags:
+    - Bun
+
+- type: metamorphRecipe
+  id: FoodBurgerBacon
+  key: Burger
+  result: FoodBurgerBacon
+  rules:
+  - !type:SequenceLength
+    range:
+      min: 4
+      max: 5
+  - !type:IngredientsWithTags # 1 bacon
+    tags:
+    - Cooked
+    - Bacon
+    - Meat
+    count:
+      min: 1
+      max: 2
+  - !type:IngredientsWithTags # 2 cheese slices
+    tags:
+    - Cheese
+    count:
+      min: 2
+      max: 3
+  - !type:LastElementHasTags # last bun
+    tags:
+    - Bun
+
+- type: metamorphRecipe
   id: FoodBurgerChicken
   key: Burger
   result: FoodBurgerChicken
@@ -50,8 +98,101 @@
   - !type:FoodHasReagent # 5 +- 2 mayo
     reagent: Mayo
     count:
-     min: 3
-     max: 7
+      min: 3
+      max: 7
+  - !type:LastElementHasTags # last bun
+    tags:
+    - Bun
+
+- type: metamorphRecipe
+  id: FoodBurgerMcguffin
+  key: Burger
+  result: FoodBurgerMcguffin
+  rules:
+  - !type:SequenceLength
+    range:
+      min: 2
+      max: 3
+  - !type:IngredientsWithTags # 1 cheese slice
+    tags:
+    - Cheese
+    count:
+      min: 1
+      max: 2
+  - !type:FoodHasReagent # 6 +- 3 Cooked Egg
+    reagent: EggCooked
+    count:
+      min: 3
+      max: 9
+  - !type:LastElementHasTags # last bun
+    tags:
+    - Bun
+
+- type: metamorphRecipe
+  id: FoodBurgerBig
+  key: Burger
+  result: FoodBurgerBig
+  rules:
+  - !type:SequenceLength
+    range:
+      min: 7
+      max: 8
+  - !type:IngredientsWithTags # 2 meat cutlets
+    tags:
+    - Cooked
+    - Cutlet
+    - Meat
+    count:
+      min: 2
+      max: 3
+  - !type:IngredientsWithTags # 1 tomato
+    tags:
+    - Vegetable
+    - Fruit
+    count:
+      min: 1
+      max: 2
+  - !type:IngredientsWithTags # 2 onion slices
+    tags:
+    - Vegetable
+    - Slice
+    count:
+      min: 2
+      max: 3
+  - !type:IngredientsWithTags # 1 cheese slice
+    tags:
+    - Cheese
+    count:
+      min: 1
+      max: 2
+  - !type:LastElementHasTags # last bun
+    tags:
+    - Bun
+
+- type: metamorphRecipe
+  id: FoodBurgerFive
+  key: Burger
+  result: FoodBurgerFive
+  rules:
+  - !type:SequenceLength
+    range:
+      min: 5
+      max: 6
+  - !type:IngredientsWithTags # 1 Meat Cutlet
+    tags:
+    - Cooked
+    - Cutlet
+    - Meat
+    count:
+      min: 1
+      max: 2
+  - !type:IngredientsWithTags # 3 Chili Peppers
+    tags:
+    - Vegetable
+    - Chili
+    count:
+      min: 3
+      max: 4
   - !type:LastElementHasTags # last bun
     tags:
     - Bun
