--- a/Resources/Prototypes/_RMC14/Reagents/toxins.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/toxins.yml
@@ -21,3 +21,49 @@
         visualType: SmallCaution
         messages: [ "rmc-body-stings" ]
         probability: 0.2
+
+- type: reagent
+  parent: CMReagent
+  id: RMCMindbreakerToxin
+  name: reagent-name-rmcmindbreakertoxin
+  desc: reagent-desc-rmcmindbreakertoxin
+  physicalDesc: reagent-physical-desc-opaque
+  group: Toxins
+  flavor: bitter
+  color: "#B31008"
+  unknown: true
+  metabolisms:
+    Poison:
+      metabolismRate: 0.05
+      effects: #TODO Hallucinations +2 max 40.
+      - !type:GenericStatusEffect
+        key: SeeingRainbows
+        component: SeeingRainbows
+        type: Add
+        time: 2 #TODO max 40
+        refresh: false
+      - !type:Emote
+        emote: [ twitches, drools, moans, giggles ]
+        probability: 0.05
+      - !type:GenericStatusEffect
+        key: Jitter
+        type: Add
+        time: 2.5
+        refresh: false
+      - !type:GenericStatusEffect
+        key: Jitter
+        type: Add
+        time: 2.5
+        refresh: false
+        condition:
+        - !type:ReagentThreshold #TODO RandomWalk starts at 30 OD
+          min: 30
+      - !type:GenericStatusEffect
+        key: Unconscious
+        component: RMCUnconscious
+        type: Add
+        time: 10
+        refresh: false
+        condition:
+        - !type:ReagentThreshold #TODO 2 brain damage/s at 50 OD
+          min: 50
