updated mcguffin stacking recipe to use fried eggs instead of eggcooked reagent

--- a/Resources/Prototypes/Recipes/Cooking/food_sequence_element.yml
+++ b/Resources/Prototypes/Recipes/Cooking/food_sequence_element.yml
@@ -56,6 +56,18 @@
   tags:
   - Cheese
 
+# Fried Egg
+
+- type: foodSequenceElement
+  id: MealFriedEgg
+  name: food-sequence-content-friedegg
+  sprites:
+  - sprite: Objects/Consumable/Food/meals.rsi
+    state: friedegg
+  tags:
+  - Meat
+  - Egg
+
 # Steak
 
 - type: foodSequenceElement
