--- a/Resources/Prototypes/_RMC14/Reagents/toxins.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/toxins.yml
@@ -21,3 +21,36 @@
         visualType: SmallCaution
         messages: [ "rmc-body-stings" ]
         probability: 0.2
+
+- type: reagent
+  parent: [ CMReagent, MindbreakerToxin ]
+  id: RMCMindbreakerToxin
+  name: reagent-name-rmcmindbreakertoxin
+  desc: reagent-desc-rmcmindbreakertoxin
+  color: "#B31008"
+  unknown: true
+  metabolisms:
+    Poison:
+      metabolismRate: 0.05
+      effects: #TODO Hallucinations +2 max 40.
+      - !type:GenericStatusEffect
+        key: SeeingRainbows
+        component: SeeingRainbows
+        type: Add
+        time: 2 #TODO max 40
+        refresh: false
+      - !type:Emote
+        emote: Laugh #TODO twitches, drools, moans.
+        showInChat: true
+        probability: 0.05
+      - !type:Jitter
+        #TODO RandomWalk at 30 OD
+        #TODO more jitter at 30 OD
+      - !type:GenericStatusEffect
+        conditions:
+        - !type:ReagentThreshold #TODO 2 brain damage/s at 50 OD
+          min: 50
+        key: Unconscious
+        component: RMCUnconscious
+        type: Add
+        time: 20
