--- a/Resources/Prototypes/_RMC14/Reagents/toxins.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/toxins.yml
@@ -23,6 +23,41 @@
         probability: 0.2
 
 - type: reagent
+  parent: [ CMReagent, Lexorin ]
+  id: RMCLexorin
+  name: reagent-name-rmclexorin
+  desc: reagent-desc-rmclexorin
+  physicalDesc: reagent-physical-desc-pungent
+  color: "#C8A5DC"
+  overdose: 30
+  effects:
+  - !type:HealthChange
+    damage:
+      groups:
+        Brute: 0.25
+        Airloss: 4
+  - !type:Emote
+    emote: Gasp
+    probability: 0.1
+  - !type:HealthChange
+    conditions:
+    - !type:ReagentThreshold
+      min: 30
+    damage:
+      groups:
+        Brute: 2.5
+        Toxin: 2
+        Airloss: 10
+  - !type:HealthChange
+    conditions:
+    - !type:ReagentThreshold
+      min: 50
+    damage:
+      groups:
+        Brute: 11.25
+        Toxin: 4
+
+- type: reagent
   parent: [ CMReagent, MindbreakerToxin ]
   id: RMCMindbreakerToxin
   name: reagent-name-rmcmindbreakertoxin
