--- a/Resources/Prototypes/_RMC14/Reagents/toxins.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/toxins.yml
@@ -35,7 +35,10 @@
     damage:
       groups:
         Brute: 0.25
-        Airloss: 4
+  - !type:HealthChange
+    damage:
+      types:
+        Asphyxiation: 4
   - !type:Emote
     emote: Gasp
     probability: 0.1
