--- a/Resources/Prototypes/_RMC14/Reagents/toxins.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/toxins.yml
@@ -30,34 +30,37 @@
   physicalDesc: reagent-physical-desc-pungent
   color: "#C8A5DC"
   overdose: 30
-  effects:
-  - !type:HealthChange
-    damage:
-      groups:
-        Brute: 0.25
-      types:
-        Asphyxiation: 4
-  - !type:Emote
-    emote: Gasp
-    probability: 0.1
-  - !type:HealthChange
-    conditions:
-    - !type:ReagentThreshold
-      min: 30
-    damage:
-      groups:
-        Brute: 2.5
-        Toxin: 2
-      types:
-        Asphyxiation: 10
-  - !type:HealthChange
-    conditions:
-    - !type:ReagentThreshold
-      min: 50
-    damage:
-      groups:
-        Brute: 11.25
-        Toxin: 4
+  metabolisms:
+    Poison:
+      metabolismRate: 0.05
+      effects:
+      - !type:HealthChange
+        damage:
+          groups:
+            Brute: 0.25
+          types:
+            Asphyxiation: 4
+      - !type:Emote
+        emote: Gasp
+        probability: 0.1
+      - !type:HealthChange
+        conditions:
+        - !type:ReagentThreshold
+          min: 30
+        damage:
+          groups:
+            Brute: 2.5
+            Toxin: 2
+          types:
+            Asphyxiation: 10
+      - !type:HealthChange
+        conditions:
+        - !type:ReagentThreshold
+          min: 50
+        damage:
+          groups:
+            Brute: 11.25
+            Toxin: 4
 
 - type: reagent
   parent: [ CMReagent, MindbreakerToxin ]
